add - grunt build

--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,8 @@ dependencies:
   override:
     - npm install
     - bower install
-#  post:
-
+  post:
+    - grunt build
 #test:
 #  override:
 #    - grunt test
