--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,9 @@ dependencies:
     - bower install
   post:
     - grunt build
-#test:
-#  override:
-#    - grunt test
+test:
+  override:
+    - grunt test
 
 #deployment:
 #  prod:
